Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11548

increase default readahead tunables to match common settings

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      It is commonly recommended to increase the readahead tunables for clients, since the current defaults are too small, having been set several years ago for slower networks and servers.

      Increase the readahead defaults to better match values that are recommended today:

      • read_ahead_max_mb increased from 64MB 1GB by default (or 1/32 RAM, whichever is less)
      • read_ahead_per_file_max_mb is increased from 64MB to 128MB

            wshilong Wang Shilong (Inactive)
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: